Bug 1305700 - pt 1 & 2 - Exclude case mappings from nsUnicodePropertyData.cpp, and use ICU case mappings instead of our own table when building with ENABLE_INTL_API. r=m_kato